@@ -1,5 +1,7 @@
 - urpmi
   o in --auto, do display an error message when rpms are missing
+  o in --auto, do not allow to install a package substring match
+    (you can use -a to force it)
   o revert --auto-update behaviour in case of media update failures (#45417)
   o ensure download when updating media (with --auto-update) is quiet
 - urpmi.update
